Dockerize this shit (#28)
* moved files

* Added Docker Files

* added new deploy workflow

* try publish part

* huh?

* fix? maybe?

* now fix

* actually build the compose parts

* try publish

* fixed workflow

* idk

* idk

* wrong branch name lol

* new workflow

* covker compsoe

* added env

* added permissions

* added ssl to deploy

* new try for ssl

* idkf debug

* idk

* idk

* maybe different location fixes it idk

* fixed typo

* added deploy to workflow

* added dependency

* fixed something

* added env file to deployment

* added sudo whoops

* parralized building

* added permissions for django user

* changed static + media file location and added automatic migrations

* changed nginx root to alias

* forgot the damn slashes

* removed user

* added csrf origns

* stop running on pr's

---------

Co-authored-by: seeeebaaaa <>

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -35,12 +35,12 @@ server {
 
     # Static and media files
     location /static/ {
-        root /home/site/django/staticfiles;
+        alias /home/site/django/staticfiles/;
         #root /var/www/polycoid;
     }
 
     location /media/ {
-        root /home/site/django/medaifiles;
+        alias /home/site/django/medaifiles/;
         # root /var/www/polycoid;
     }
 }
